dev: fix z-index bug with header in mobile

--- a/src/components/content/ccdesign-header/mobile-nav/mobile-nav.scss
+++ b/src/components/content/ccdesign-header/mobile-nav/mobile-nav.scss
@@ -37,7 +37,7 @@ mobile-nav {
     &__mobile {
       position: fixed;
       top: 0;
-      z-index: 1;
+      z-index: 6;
       width: 280px;
       height: 100vh;
       background-color: $cc-grey4;
